#
# 注意：不要修改任何 CMakeLists.txt 文件中的任何内容，否则可能会导致编译不正确。
# 如果不小心修改了，请使用对应目录下的原始CMakeLists.txt 文件覆盖。
#


#add_executable(exp_04_01_rights_manager_test exp_04_01_rights_manager_test.cpp)
#target_link_libraries(exp_04_01_rights_manager_test ${TEST_LIBRARIES} securitymanager)
#
#add_executable(exp_04_02_rights_check_test exp_04_02_rights_check_test.cpp)
#target_link_libraries(exp_04_02_rights_check_test ${TEST_LIBRARIES} securitymanager)
